[package]
name = "vmtouch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
derive_more = {version = "1.0.0",  features = ["from", "display"]}
glob = "0.3.1"
lazy_static = "1.5.0"
libc = { workspace = true }
memmap2 = { workspace = true }
nix = { version = "0.29.0", features = ["fs", "mman"] }

